<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">jiffy</string>
    <string name="action_settings">Settings</string>
    
    <!-- Main -->
    <string name="btn_education">Leistungen ansehen</string>
    <string name="btn_writeMsg">Nachricht schreiben</string>
    <string name="btn_readMsg">Nachricht lesen</string>
    <string name="lbl_newMsg">Keine neuen Nachrichten.</string>
    
	<!-- Education -->
	<string name="tab_kind1">Elisabeth</string>
	<string name="tab_kind2">Naomi</string>
	<string name="lbl_subj_ma">Mathematik: 2,4</string>
	<string name="lbl_subj_en">Englisch: 3,1</string>
	<string name="lbl_subj_de">Deutsch: 3,1</string>
	<string name="lbl_subj_inf">Informatik: 1,0</string>
	<string name="lbl_subj_rel">Religion: 2,2</string>
	<string name="lbl_subj_bk">Kunst: 1,7</string>
	
	<!-- Messages -->
	<string name="btn_send">Senden</string>
	<string name="list_name">Empfänger</string>
	<string name="listitem_receiver_name">Frau O. Felgendreher</string>
	<string name="listitem_receiver_role">Mathematik-Lehrerin</string>
	
</resources>
