<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/tab_kind1"
                     android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tab_kind1">

                    <TextView
                        android:id="@+id/lbl_subj_bk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_subj_bk"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    
                    <TextView
                        android:id="@+id/lbl_subj_rel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_subj_rel"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    
                    <TextView
                        android:id="@+id/lbl_subj_inf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_subj_inf"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    
                    <TextView
                        android:id="@+id/lbl_subj_en"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_subj_en"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    
                    <TextView
                        android:id="@+id/lbl_subj_de"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_subj_de"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    
                    <TextView
                        android:id="@+id/lbl_subj_ma"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_subj_ma"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab_kind2"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tab_kind2" >
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</LinearLayout>
