<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btn_education"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="seeEducation"
        android:text="@string/btn_education" />

    <Button
        android:id="@+id/btn_writeMsg"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lbl_newMsg"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/btn_readMsg"
        android:onClick="sendMsg"
        android:text="@string/btn_writeMsg" />

    <Button
        android:id="@+id/btn_readMsg"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_writeMsg"
        android:layout_alignRight="@+id/lbl_newMsg"
        android:layout_alignTop="@+id/btn_writeMsg"
        android:onClick="readMsg"
        android:text="@string/btn_readMsg" />

    <TextView
        android:id="@+id/lbl_newMsg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_education"
        android:layout_below="@+id/btn_education"
        android:text="@string/lbl_newMsg"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>